cori/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSAND
    ASTERISK
    AT
    BACKSLASH
    CARET
    COMMA
    DOLLAR
    DOT
    DOUBLE_QUOTE
    EQUALS
    EXCLAMATION
    GRAVE
    GREATER_THAN
    HASH
    HT
    LBRACE
    LBRACKET
    LBRACKET_SPEC
    LESS_THAN
    LPAREN
    MINUS
    NULL_CHAR
    PERCENT
    PLUS
    QUESTION
    RBRACE
    RBRACKET
    RBRACKET_SPEC
    RPAREN
    SEMICOLON
    SINGLE_QUOTE
    SLASH
    SPACE
    TILDE
    UNDERSCORE
    VERTICAL_BAR

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> declaration_statement
Rule 5     statement -> expression_statement
Rule 6     statement -> print_statement
Rule 7     statement -> if_statement
Rule 8     statement -> while_statement
Rule 9     statement -> return_statement
Rule 10    statement -> break_statement
Rule 11    statement -> block_statement
Rule 12    statement -> switch_statement
Rule 13    declaration_statement -> type IDENTIFIER SEMICOLON_SPEC
Rule 14    declaration_statement -> type IDENTIFIER ASSIGN_OP expression SEMICOLON_SPEC
Rule 15    type -> ENTERO
Rule 16    type -> FLOTANTE
Rule 17    type -> STRING
Rule 18    type -> CHAR
Rule 19    type -> ARRAY
Rule 20    expression_statement -> expression SEMICOLON_SPEC
Rule 21    expression_statement -> SEMICOLON_SPEC
Rule 22    print_statement -> PRINT LPAREN_SPEC expression RPAREN_SPEC SEMICOLON_SPEC
Rule 23    if_statement -> IF LPAREN_SPEC expression RPAREN_SPEC statement
Rule 24    if_statement -> IF LPAREN_SPEC expression RPAREN_SPEC statement ELSE statement
Rule 25    while_statement -> WHILE LPAREN_SPEC expression RPAREN_SPEC statement
Rule 26    return_statement -> RETURN expression SEMICOLON_SPEC
Rule 27    return_statement -> RETURN SEMICOLON_SPEC
Rule 28    break_statement -> BREAK SEMICOLON_SPEC
Rule 29    block_statement -> LBRACE_SPEC statement_list RBRACE_SPEC
Rule 30    block_statement -> LBRACE_SPEC RBRACE_SPEC
Rule 31    switch_statement -> SWITCH LPAREN_SPEC expression RPAREN_SPEC LBRACE_SPEC case_list RBRACE_SPEC
Rule 32    switch_statement -> SWITCH LPAREN_SPEC expression RPAREN_SPEC LBRACE_SPEC RBRACE_SPEC
Rule 33    case_list -> case
Rule 34    case_list -> case_list case
Rule 35    case -> CASE expression COLON statement_list
Rule 36    case -> DEFAULT COLON statement_list
Rule 37    expression -> assignment_expression
Rule 38    expression -> binary_expression
Rule 39    expression -> unary_expression
Rule 40    expression -> primary_expression
Rule 41    assignment_expression -> IDENTIFIER ASSIGN_OP expression
Rule 42    binary_expression -> expression PLUS_OP expression
Rule 43    binary_expression -> expression MINUS_OP expression
Rule 44    binary_expression -> expression MULT_OP expression
Rule 45    binary_expression -> expression DIV_OP expression
Rule 46    binary_expression -> expression EQ_OP expression
Rule 47    binary_expression -> expression NE_OP expression
Rule 48    unary_expression -> PLUS_OP expression
Rule 49    unary_expression -> MINUS_OP expression
Rule 50    primary_expression -> literal
Rule 51    primary_expression -> IDENTIFIER
Rule 52    primary_expression -> LPAREN_SPEC expression RPAREN_SPEC
Rule 53    literal -> numeric_literal
Rule 54    literal -> string_literal
Rule 55    literal -> boolean_literal
Rule 56    literal -> null_literal
Rule 57    numeric_literal -> HEX_0
Rule 58    numeric_literal -> HEX_1
Rule 59    numeric_literal -> HEX_2
Rule 60    numeric_literal -> HEX_3
Rule 61    numeric_literal -> HEX_4
Rule 62    numeric_literal -> HEX_5
Rule 63    numeric_literal -> HEX_6
Rule 64    numeric_literal -> HEX_7
Rule 65    numeric_literal -> HEX_8
Rule 66    numeric_literal -> HEX_9
Rule 67    numeric_literal -> HEX_A
Rule 68    numeric_literal -> HEX_B
Rule 69    numeric_literal -> HEX_C
Rule 70    numeric_literal -> HEX_D
Rule 71    numeric_literal -> HEX_E
Rule 72    numeric_literal -> HEX_F
Rule 73    string_literal -> STRING
Rule 74    boolean_literal -> TRUE
Rule 75    boolean_literal -> FALSE
Rule 76    null_literal -> NULL

Terminals, with rules where they appear

AMPERSAND            : 
ARRAY                : 19
ASSIGN_OP            : 14 41
ASTERISK             : 
AT                   : 
BACKSLASH            : 
BREAK                : 28
CARET                : 
CASE                 : 35
CHAR                 : 18
COLON                : 35 36
COMMA                : 
DEFAULT              : 36
DIV_OP               : 45
DOLLAR               : 
DOT                  : 
DOUBLE_QUOTE         : 
ELSE                 : 24
ENTERO               : 15
EQUALS               : 
EQ_OP                : 46
EXCLAMATION          : 
FALSE                : 75
FLOTANTE             : 16
GRAVE                : 
GREATER_THAN         : 
HASH                 : 
HEX_0                : 57
HEX_1                : 58
HEX_2                : 59
HEX_3                : 60
HEX_4                : 61
HEX_5                : 62
HEX_6                : 63
HEX_7                : 64
HEX_8                : 65
HEX_9                : 66
HEX_A                : 67
HEX_B                : 68
HEX_C                : 69
HEX_D                : 70
HEX_E                : 71
HEX_F                : 72
HT                   : 
IDENTIFIER           : 13 14 41 51
IF                   : 23 24
LBRACE               : 
LBRACE_SPEC          : 29 30 31 32
LBRACKET             : 
LBRACKET_SPEC        : 
LESS_THAN            : 
LPAREN               : 
LPAREN_SPEC          : 22 23 24 25 31 32 52
MINUS                : 
MINUS_OP             : 43 49
MULT_OP              : 44
NE_OP                : 47
NULL                 : 76
NULL_CHAR            : 
PERCENT              : 
PLUS                 : 
PLUS_OP              : 42 48
PRINT                : 22
QUESTION             : 
RBRACE               : 
RBRACE_SPEC          : 29 30 31 32
RBRACKET             : 
RBRACKET_SPEC        : 
RETURN               : 26 27
RPAREN               : 
RPAREN_SPEC          : 22 23 24 25 31 32 52
SEMICOLON            : 
SEMICOLON_SPEC       : 13 14 20 21 22 26 27 28
SINGLE_QUOTE         : 
SLASH                : 
SPACE                : 
STRING               : 17 73
SWITCH               : 31 32
TILDE                : 
TRUE                 : 74
UNDERSCORE           : 
VERTICAL_BAR         : 
WHILE                : 25
error                : 

Nonterminals, with rules where they appear

assignment_expression : 37
binary_expression    : 38
block_statement      : 11
boolean_literal      : 55
break_statement      : 10
case                 : 33 34
case_list            : 31 34
declaration_statement : 4
expression           : 14 20 22 23 24 25 26 31 32 35 41 42 42 43 43 44 44 45 45 46 46 47 47 48 49 52
expression_statement : 5
if_statement         : 7
literal              : 50
null_literal         : 56
numeric_literal      : 53
primary_expression   : 40
print_statement      : 6
program              : 0
return_statement     : 9
statement            : 2 3 23 24 24 25
statement_list       : 1 3 29 35 36
string_literal       : 54
switch_statement     : 12
type                 : 13 14
unary_expression     : 39
while_statement      : 8

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration_statement
    (5) statement -> . expression_statement
    (6) statement -> . print_statement
    (7) statement -> . if_statement
    (8) statement -> . while_statement
    (9) statement -> . return_statement
    (10) statement -> . break_statement
    (11) statement -> . block_statement
    (12) statement -> . switch_statement
    (13) declaration_statement -> . type IDENTIFIER SEMICOLON_SPEC
    (14) declaration_statement -> . type IDENTIFIER ASSIGN_OP expression SEMICOLON_SPEC
    (20) expression_statement -> . expression SEMICOLON_SPEC
    (21) expression_statement -> . SEMICOLON_SPEC
    (22) print_statement -> . PRINT LPAREN_SPEC expression RPAREN_SPEC SEMICOLON_SPEC
    (23) if_statement -> . IF LPAREN_SPEC expression RPAREN_SPEC statement
    (24) if_statement -> . IF LPAREN_SPEC expression RPAREN_SPEC statement ELSE statement
    (25) while_statement -> . WHILE LPAREN_SPEC expression RPAREN_SPEC statement
    (26) return_statement -> . RETURN expression SEMICOLON_SPEC
    (27) return_statement -> . RETURN SEMICOLON_SPEC
    (28) break_statement -> . BREAK SEMICOLON_SPEC
    (29) block_statement -> . LBRACE_SPEC statement_list RBRACE_SPEC
    (30) block_statement -> . LBRACE_SPEC RBRACE_SPEC
    (31) switch_statement -> . SWITCH LPAREN_SPEC expression RPAREN_SPEC LBRACE_SPEC case_list RBRACE_SPEC
    (32) switch_statement -> . SWITCH LPAREN_SPEC expression RPAREN_SPEC LBRACE_SPEC RBRACE_SPEC
    (15) type -> . ENTERO
    (16) type -> . FLOTANTE
    (17) type -> . STRING
    (18) type -> . CHAR
    (19) type -> . ARRAY
    (37) expression -> . assignment_expression
    (38) expression -> . binary_expression
    (39) expression -> . unary_expression
    (40) expression -> . primary_expression
    (41) assignment_expression -> . IDENTIFIER ASSIGN_OP expression
    (42) binary_expression -> . expression PLUS_OP expression
    (43) binary_expression -> . expression MINUS_OP expression
    (44) binary_expression -> . expression MULT_OP expression
    (45) binary_expression -> . expression DIV_OP expression
    (46) binary_expression -> . expression EQ_OP expression
    (47) binary_expression -> . expression NE_OP expression
    (48) unary_expression -> . PLUS_OP expression
    (49) unary_expression -> . MINUS_OP expression
    (50) primary_expression -> . literal
    (51) primary_expression -> . IDENTIFIER
    (52) primary_expression -> . LPAREN_SPEC expression RPAREN_SPEC
    (53) literal -> . numeric_literal
    (54) literal -> . string_literal
    (55) literal -> . boolean_literal
    (56) literal -> . null_literal
    (57) numeric_literal -> . HEX_0
    (58) numeric_literal -> . HEX_1
    (59) numeric_literal -> . HEX_2
    (60) numeric_literal -> . HEX_3
    (61) numeric_literal -> . HEX_4
    (62) numeric_literal -> . HEX_5
    (63) numeric_literal -> . HEX_6
    (64) numeric_literal -> . HEX_7
    (65) numeric_literal -> . HEX_8
    (66) numeric_literal -> . HEX_9
    (67) numeric_literal -> . HEX_A
    (68) numeric_literal -> . HEX_B
    (69) numeric_literal -> . HEX_C
    (70) numeric_literal -> . HEX_D
    (71) numeric_literal -> . HEX_E
    (72) numeric_literal -> . HEX_F
    (73) string_literal -> . STRING
    (74) boolean_literal -> . TRUE
    (75) boolean_literal -> . FALSE
    (76) null_literal -> . NULL

    SEMICOLON_SPEC  shift and go to state 15
    PRINT           shift and go to state 17
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    RETURN          shift and go to state 21
    BREAK           shift and go to state 22
    LBRACE_SPEC     shift and go to state 23
    SWITCH          shift and go to state 24
    ENTERO          shift and go to state 25
    FLOTANTE        shift and go to state 26
    STRING          shift and go to state 27
    CHAR            shift and go to state 28
    ARRAY           shift and go to state 29
    IDENTIFIER      shift and go to state 14
    PLUS_OP         shift and go to state 34
    MINUS_OP        shift and go to state 35
    LPAREN_SPEC     shift and go to state 18
    HEX_0           shift and go to state 41
    HEX_1           shift and go to state 42
    HEX_2           shift and go to state 43
    HEX_3           shift and go to state 44
    HEX_4           shift and go to state 45
    HEX_5           shift and go to state 46
    HEX_6           shift and go to state 47
    HEX_7           shift and go to state 48
    HEX_8           shift and go to state 49
    HEX_9           shift and go to state 50
    HEX_A           shift and go to state 51
    HEX_B           shift and go to state 52
    HEX_C           shift and go to state 53
    HEX_D           shift and go to state 54
    HEX_E           shift and go to state 55
    HEX_F           shift and go to state 56
    TRUE            shift and go to state 57
    FALSE           shift and go to state 58
    NULL            shift and go to state 59

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration_statement          shift and go to state 4
    expression_statement           shift and go to state 5
    print_statement                shift and go to state 6
    if_statement                   shift and go to state 7
    while_statement                shift and go to state 8
    return_statement               shift and go to state 9
    break_statement                shift and go to state 10
    block_statement                shift and go to state 11
    switch_statement               shift and go to state 12
    type                           shift and go to state 13
    expression                     shift and go to state 16
    assignment_expression          shift and go to state 30
    binary_expression              shift and go to state 31
    unary_expression               shift and go to state 32
    primary_expression             shift and go to state 33
    literal                        shift and go to state 36
    numeric_literal                shift and go to state 37
    string_literal                 shift and go to state 38
    boolean_literal                shift and go to state 39
    null_literal                   shift and go to state 40

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . declaration_statement
    (5) statement -> . expression_statement
    (6) statement -> . print_statement
    (7) statement -> . if_statement
    (8) statement -> . while_statement
    (9) statement -> . return_statement
    (10) statement -> . break_statement
    (11) statement -> . block_statement
    (12) statement -> . switch_statement
    (13) declaration_statement -> . type IDENTIFIER SEMICOLON_SPEC
    (14) declaration_statement -> . type IDENTIFIER ASSIGN_OP expression SEMICOLON_SPEC
    (20) expression_statement -> . expression SEMICOLON_SPEC
    (21) expression_statement -> . SEMICOLON_SPEC
    (22) print_statement -> . PRINT LPAREN_SPEC expression RPAREN_SPEC SEMICOLON_SPEC
    (23) if_statement -> . IF LPAREN_SPEC expression RPAREN_SPEC statement
    (24) if_statement -> . IF LPAREN_SPEC expression RPAREN_SPEC statement ELSE statement
    (25) while_statement -> . WHILE LPAREN_SPEC expression RPAREN_SPEC statement
    (26) return_statement -> . RETURN expression SEMICOLON_SPEC
    (27) return_statement -> . RETURN SEMICOLON_SPEC
    (28) break_statement -> . BREAK SEMICOLON_SPEC
    (29) block_statement -> . LBRACE_SPEC statement_list RBRACE_SPEC
    (30) block_statement -> . LBRACE_SPEC RBRACE_SPEC
    (31) switch_statement -> . SWITCH LPAREN_SPEC expression RPAREN_SPEC LBRACE_SPEC case_list RBRACE_SPEC
    (32) switch_statement -> . SWITCH LPAREN_SPEC expression RPAREN_SPEC LBRACE_SPEC RBRACE_SPEC
    (15) type -> . ENTERO
    (16) type -> . FLOTANTE
    (17) type -> . STRING
    (18) type -> . CHAR
    (19) type -> . ARRAY
    (37) expression -> . assignment_expression
    (38) expression -> . binary_expression
    (39) expression -> . unary_expression
    (40) expression -> . primary_expression
    (41) assignment_expression -> . IDENTIFIER ASSIGN_OP expression
    (42) binary_expression -> . expression PLUS_OP expression
    (43) binary_expression -> . expression MINUS_OP expression
    (44) binary_expression -> . expression MULT_OP expression
    (45) binary_expression -> . expression DIV_OP expression
    (46) binary_expression -> . expression EQ_OP expression
    (47) binary_expression -> . expression NE_OP expression
    (48) unary_expression -> . PLUS_OP expression
    (49) unary_expression -> . MINUS_OP expression
    (50) primary_expression -> . literal
    (51) primary_expression -> . IDENTIFIER
    (52) primary_expression -> . LPAREN_SPEC expression RPAREN_SPEC
    (53) literal -> . numeric_literal
    (54) literal -> . string_literal
    (55) literal -> . boolean_literal
    (56) literal -> . null_literal
    (57) numeric_literal -> . HEX_0
    (58) numeric_literal -> . HEX_1
    (59) numeric_literal -> . HEX_2
    (60) numeric_literal -> . HEX_3
    (61) numeric_literal -> . HEX_4
    (62) numeric_literal -> . HEX_5
    (63) numeric_literal -> . HEX_6
    (64) numeric_literal -> . HEX_7
    (65) numeric_literal -> . HEX_8
    (66) numeric_literal -> . HEX_9
    (67) numeric_literal -> . HEX_A
    (68) numeric_literal -> . HEX_B
    (69) numeric_literal -> . HEX_C
    (70) numeric_literal -> . HEX_D
    (71) numeric_literal -> . HEX_E
    (72) numeric_literal -> . HEX_F
    (73) string_literal -> . STRING
    (74) boolean_literal -> . TRUE
    (75) boolean_literal -> . FALSE
    (76) null_literal -> . NULL

    $end            reduce using rule 1 (program -> statement_list .)
    SEMICOLON_SPEC  shift and go to state 15
    PRINT           shift and go to state 17
    IF              shift and go to state 19
    WHILE           shift and go to state 20
    RETURN          shift and go to state 21
    BREAK           shift and go to state 22
    LBRACE_SPEC     shift and go to state 23
    SWITCH          shift and go to state 24
    ENTERO          shift and go to state 25
    FLOTANTE        shift and go to state 26
    STRING          shift and go to state 27
    CHAR            shift and go to state 28
    ARRAY           shift and go to state 29
    IDENTIFIER      shift and go to state 14
    PLUS_OP         shift and go to state 34
    MINUS_OP        shift and go to state 35
    LPAREN_SPEC     shift and go to state 18
    HEX_0           shift and go to state 41
    HEX_1           shift and go to state 42
    HEX_2           shift and go to state 43
    HEX_3           shift and go to state 44
    HEX_4           shift and go to state 45
    HEX_5           shift and go to state 46
    HEX_6           shift and go to state 47
    HEX_7           shift and go to state 48
    HEX_8           shift and go to state 49
    HEX_9           shift and go to state 50
    HEX_A           shift and go to state 51
    HEX_B           shift and go to state 52
    HEX_C           shift and go to state 53
    HEX_D           shift and go to state 54
    HEX_E           shift and go to state 55
    HEX_F           shift and go to state 56
    TRUE            shift and go to state 57
    FALSE           shift and go to state 58
    NULL            shift and go to state 59

    statement                      shift and go to state 60
    declaration_statement          shift and go to state 4
    expression_statement           shift and go to state 5
    print_statement                shift and go to state 6
    if_statement                   shift and go to state 7
    while_statement                shift and go to state 8
    return_statement               shift and go to state 9
    break_statement                shift and go to state 10
    block_statement                shift and go to state 11
    switch_statement               shift and go to state 12
    type                           shift and go to state 13
    expression                     shift and go to state 16
    assignment_expression          shift and go to state 30
    binary_expression              shift and go to state 31
    unary_expression               shift and go to state 32
    primary_expression             shift and go to state 33
    literal                        shift and go to state 36
    numeric_literal                shift and go to state 37
    string_literal                 shift and go to state 38
    boolean_literal                shift and go to state 39
    null_literal                   shift and go to state 40

state 3

    (2) statement_list -> statement .

    SEMICOLON_SPEC  reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    BREAK           reduce using rule 2 (statement_list -> statement .)
    LBRACE_SPEC     reduce using rule 2 (statement_list -> statement .)
    SWITCH          reduce using rule 2 (statement_list -> statement .)
    ENTERO          reduce using rule 2 (statement_list -> statement .)
    FLOTANTE        reduce using rule 2 (statement_list -> statement .)
    STRING          reduce using rule 2 (statement_list -> statement .)
    CHAR            reduce using rule 2 (statement_list -> statement .)
    ARRAY           reduce using rule 2 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 2 (statement_list -> statement .)
    PLUS_OP         reduce using rule 2 (statement_list -> statement .)
    MINUS_OP        reduce using rule 2 (statement_list -> statement .)
    LPAREN_SPEC     reduce using rule 2 (statement_list -> statement .)
    HEX_0           reduce using rule 2 (statement_list -> statement .)
    HEX_1           reduce using rule 2 (statement_list -> statement .)
    HEX_2           reduce using rule 2 (statement_list -> statement .)
    HEX_3           reduce using rule 2 (statement_list -> statement .)
    HEX_4           reduce using rule 2 (statement_list -> statement .)
    HEX_5           reduce using rule 2 (statement_list -> statement .)
    HEX_6           reduce using rule 2 (statement_list -> statement .)
    HEX_7           reduce using rule 2 (statement_list -> statement .)
    HEX_8           reduce using rule 2 (statement_list -> statement .)
    HEX_9           reduce using rule 2 (statement_list -> statement .)
    HEX_A           reduce using rule 2 (statement_list -> statement .)
    HEX_B           reduce using rule 2 (statement_list -> statement .)
    HEX_C           reduce using rule 2 (statement_list -> statement .)
    HEX_D           reduce using rule 2 (statement_list -> statement .)
    HEX_E           reduce using rule 2 (statement_list -> statement .)
    HEX_F           reduce using rule 2 (statement_list -> statement .)
    TRUE            reduce using rule 2 (statement_list -> statement .)
    FALSE           reduce using rule 2 (statement_list -> statement .)
    NULL            reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE_SPEC     reduce using rule 2 (statement_list -> statement .)
    CASE            reduce using rule 2 (statement_list -> statement .)
    DEFAULT         reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> declaration_statement .

    SEMICOLON_SPEC  reduce using rule 4 (statement -> declaration_statement .)
    PRINT           reduce using rule 4 (statement -> declaration_statement .)
    IF              reduce using rule 4 (statement -> declaration_statement .)
    WHILE           reduce using rule 4 (statement -> declaration_statement .)
    RETURN          reduce using rule 4 (statement -> declaration_statement .)
    BREAK           reduce using rule 4 (statement -> declaration_statement .)
    LBRACE_SPEC     reduce using rule 4 (statement -> declaration_statement .)
    SWITCH          reduce using rule 4 (statement -> declaration_statement .)
    ENTERO          reduce using rule 4 (statement -> declaration_statement .)
    FLOTANTE        reduce using rule 4 (statement -> declaration_statement .)
    STRING          reduce using rule 4 (statement -> declaration_statement .)
    CHAR            reduce using rule 4 (statement -> declaration_statement .)
    ARRAY           reduce using rule 4 (statement -> declaration_statement .)
    IDENTIFIER      reduce using rule 4 (statement -> declaration_statement .)
    PLUS_OP         reduce using rule 4 (statement -> declaration_statement .)
    MINUS_OP        reduce using rule 4 (statement -> declaration_statement .)
    LPAREN_SPEC     reduce using rule 4 (statement -> declaration_statement .)
    HEX_0           reduce using rule 4 (statement -> declaration_statement .)
    HEX_1           reduce using rule 4 (statement -> declaration_statement .)
    HEX_2           reduce using rule 4 (statement -> declaration_statement .)
    HEX_3           reduce using rule 4 (statement -> declaration_statement .)
    HEX_4           reduce using rule 4 (statement -> declaration_statement .)
    HEX_5           reduce using rule 4 (statement -> declaration_statement .)
    HEX_6           reduce using rule 4 (statement -> declaration_statement .)
    HEX_7           reduce using rule 4 (statement -> declaration_statement .)
    HEX_8           reduce using rule 4 (statement -> declaration_statement .)
    HEX_9           reduce using rule 4 (statement -> declaration_statement .)
    HEX_A           reduce using rule 4 (statement -> declaration_statement .)
    HEX_B           reduce using rule 4 (statement -> declaration_statement .)
    HEX_C           reduce using rule 4 (statement -> declaration_statement .)
    HEX_D           reduce using rule 4 (statement -> declaration_statement .)
    HEX_E           reduce using rule 4 (statement -> declaration_statement .)
    HEX_F           reduce using rule 4 (statement -> declaration_statement .)
    TRUE            reduce using rule 4 (statement -> declaration_statement .)
    FALSE           reduce using rule 4 (statement -> declaration_statement .)
    NULL            reduce using rule 4 (statement -> declaration_statement .)
    $end            reduce using rule 4 (statement -> declaration_statement .)
    RBRACE_SPEC     reduce using rule 4 (statement -> declaration_statement .)
    ELSE            reduce using rule 4 (statement -> declaration_statement .)
    CASE            reduce using rule 4 (statement -> declaration_statement .)
    DEFAULT         reduce using rule 4 (statement -> declaration_statement .)


state 5

    (5) statement -> expression_statement .

    SEMICOLON_SPEC  reduce using rule 5 (statement -> expression_statement .)
    PRINT           reduce using rule 5 (statement -> expression_statement .)
    IF              reduce using rule 5 (statement -> expression_statement .)
    WHILE           reduce using rule 5 (statement -> expression_statement .)
    RETURN          reduce using rule 5 (statement -> expression_statement .)
    BREAK           reduce using rule 5 (statement -> expression_statement .)
    LBRACE_SPEC     reduce using rule 5 (statement -> expression_statement .)
    SWITCH          reduce using rule 5 (statement -> expression_statement .)
    ENTERO          reduce using rule 5 (statement -> expression_statement .)
    FLOTANTE        reduce using rule 5 (statement -> expression_statement .)
    STRING          reduce using rule 5 (statement -> expression_statement .)
    CHAR            reduce using rule 5 (statement -> expression_statement .)
    ARRAY           reduce using rule 5 (statement -> expression_statement .)
    IDENTIFIER      reduce using rule 5 (statement -> expression_statement .)
    PLUS_OP         reduce using rule 5 (statement -> expression_statement .)
    MINUS_OP        reduce using rule 5 (statement -> expression_statement .)
    LPAREN_SPEC     reduce using rule 5 (statement -> expression_statement .)
    HEX_0           reduce using rule 5 (statement -> expression_statement .)
    HEX_1           reduce using rule 5 (statement -> expression_statement .)
    HEX_2           reduce using rule 5 (statement -> expression_statement .)
    HEX_3           reduce using rule 5 (statement -> expression_statement .)
    HEX_4           reduce using rule 5 (statement -> expression_statement .)
    HEX_5           reduce using rule 5 (statement -> expression_statement .)
    HEX_6           reduce using rule 5 (statement -> expression_statement .)
    HEX_7           reduce using rule 5 (statement -> expression_statement .)
    HEX_8           reduce using rule 5 (statement -> expression_statement .)
    HEX_9           reduce using rule 5 (statement -> expression_statement .)
    HEX_A           reduce using rule 5 (statement -> expression_statement .)
    HEX_B           reduce using rule 5 (statement -> expression_statement .)
    HEX_C           reduce using rule 5 (statement -> expression_statement .)
    HEX_D           reduce using rule 5 (statement -> expression_statement .)
    HEX_E           reduce using rule 5 (statement -> expression_statement .)
    HEX_F           reduce using rule 5 (statement -> expression_statement .)
    TRUE            reduce using rule 5 (statement -> expression_statement .)
    FALSE           reduce using rule 5 (statement -> expression_statement .)
    NULL            reduce using rule 5 (statement -> expression_statement .)
    $end            reduce using rule 5 (statement -> expression_statement .)
    RBRACE_SPEC     reduce using rule 5 (statement -> expression_statement .)
    ELSE            reduce using rule 5 (statement -> expression_statement .)
    CASE            reduce using rule 5 (statement -> expression_statement .)
    DEFAULT         reduce using rule 5 (statement -> expression_statement .)


state 6

    (6) statement -> print_statement .

    SEMICOLON_SPEC  reduce using rule 6 (statement -> print_statement .)
    PRINT           reduce using rule 6 (statement -> print_statement .)
    IF              reduce using rule 6 (statement -> print_statement .)
    WHILE           reduce using rule 6 (statement -> print_statement .)
    RETURN          reduce using rule 6 (statement -> print_statement .)
    BREAK           reduce using rule 6 (statement -> print_statement .)
    LBRACE_SPEC     reduce using rule 6 (statement -> print_statement .)
    SWITCH          reduce using rule 6 (statement -> print_statement .)
    ENTERO          reduce using rule 6 (statement -> print_statement .)
    FLOTANTE        reduce using rule 6 (statement -> print_statement .)
    STRING          reduce using rule 6 (statement -> print_statement .)
    CHAR            reduce using rule 6 (statement -> print_statement .)
    ARRAY           reduce using rule 6 (statement -> print_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> print_statement .)
    PLUS_OP         reduce using rule 6 (statement -> print_statement .)
    MINUS_OP        reduce using rule 6 (statement -> print_statement .)
    LPAREN_SPEC     reduce using rule 6 (statement -> print_statement .)
    HEX_0           reduce using rule 6 (statement -> print_statement .)
    HEX_1           reduce using rule 6 (statement -> print_statement .)
    HEX_2           reduce using rule 6 (statement -> print_statement .)
    HEX_3           reduce using rule 6 (statement -> print_statement .)
    HEX_4           reduce using rule 6 (statement -> print_statement .)
    HEX_5           reduce using rule 6 (statement -> print_statement .)
    HEX_6           reduce using rule 6 (statement -> print_statement .)
    HEX_7           reduce using rule 6 (statement -> print_statement .)
    HEX_8           reduce using rule 6 (statement -> print_statement .)
    HEX_9           reduce using rule 6 (statement -> print_statement .)
    HEX_A           reduce using rule 6 (statement -> print_statement .)
    HEX_B           reduce using rule 6 (statement -> print_statement .)
    HEX_C           reduce using rule 6 (statement -> print_statement .)
    HEX_D           reduce using rule 6 (statement -> print_statement .)
    HEX_E           reduce using rule 6 (statement -> print_statement .)
    HEX_F           reduce using rule 6 (statement -> print_statement .)
    TRUE            reduce using rule 6 (statement -> print_statement .)
    FALSE           reduce using rule 6 (statement -> print_statement .)
    NULL            reduce using rule 6 (statement -> print_statement .)
    $end            reduce using rule 6 (statement -> print_statement .)
    RBRACE_SPEC     reduce using rule 6 (statement -> print_statement .)
    ELSE            reduce using rule 6 (statement -> print_statement .)
    CASE            reduce using rule 6 (statement -> print_statement .)
    DEFAULT         reduce using rule 6 (statement -> print_statement .)


state 7

    (7) statement -> if_statement .

    SEMICOLON_SPEC  reduce using rule 7 (statement -> if_statement .)
    PRINT           reduce using rule 7 (statement -> if_statement .)
    IF              reduce using rule 7 (statement -> if_statement .)
    WHILE           reduce using rule 7 (statement -> if_statement .)
    RETURN          reduce using rule 7 (statement -> if_statement .)
    BREAK           reduce using rule 7 (statement -> if_statement .)
    LBRACE_SPEC     reduce using rule 7 (statement -> if_statement .)
    SWITCH          reduce using rule 7 (statement -> if_statement .)
    ENTERO          reduce using rule 7 (statement -> if_statement .)
    FLOTANTE        reduce using rule 7 (statement -> if_statement .)
    STRING          reduce using rule 7 (statement -> if_statement .)
    CHAR            reduce using rule 7 (statement -> if_statement .)
    ARRAY           reduce using rule 7 (statement -> if_statement .)
    IDENTIFIER      reduce using rule 7 (statement -> if_statement .)
    PLUS_OP         reduce using rule 7 (statement -> if_statement .)
    MINUS_OP        reduce using rule 7 (statement -> if_statement .)
    LPAREN_SPEC     reduce using rule 7 (statement -> if_statement .)
    HEX_0           reduce using rule 7 (statement -> if_statement .)
    HEX_1           reduce using rule 7 (statement -> if_statement .)
    HEX_2           reduce using rule 7 (statement -> if_statement .)
    HEX_3           reduce using rule 7 (statement -> if_statement .)
    HEX_4           reduce using rule 7 (statement -> if_statement .)
    HEX_5           reduce using rule 7 (statement -> if_statement .)
    HEX_6           reduce using rule 7 (statement -> if_statement .)
    HEX_7           reduce using rule 7 (statement -> if_statement .)
    HEX_8           reduce using rule 7 (statement -> if_statement .)
    HEX_9           reduce using rule 7 (statement -> if_statement .)
    HEX_A           reduce using rule 7 (statement -> if_statement .)
    HEX_B           reduce using rule 7 (statement -> if_statement .)
    HEX_C           reduce using rule 7 (statement -> if_statement .)
    HEX_D           reduce using rule 7 (statement -> if_statement .)
    HEX_E           reduce using rule 7 (statement -> if_statement .)
    HEX_F           reduce using rule 7 (statement -> if_statement .)
    TRUE            reduce using rule 7 (statement -> if_statement .)
    FALSE           reduce using rule 7 (statement -> if_statement .)
    NULL            reduce using rule 7 (statement -> if_statement .)
    $end            reduce using rule 7 (statement -> if_statement .)
    RBRACE_SPEC     reduce using rule 7 (statement -> if_statement .)
    ELSE            reduce using rule 7 (statement -> if_statement .)
    CASE            reduce using rule 7 (statement -> if_statement .)
    DEFAULT         reduce using rule 7 (statement -> if_statement .)


state 8

    (8) statement -> while_statement .
